Unit tests updated